--- a/Invaders/Invaders/Properties/Resources.resx
+++ b/Invaders/Invaders/Properties/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="welcomeTitle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\welcomeTitle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="spaceInvaders" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\spaceInvaders.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="welcomeTitle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\welcomeTitle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="playerShip" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\playerShip.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
